Smaller changes on the Cache and SymbolScanner